--- a/apps/phone-catalog-react/src/index.html
+++ b/apps/phone-catalog-react/src/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>PhoneCatalogReact</title>
-    <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>PhoneCatalogReact</title>
+  <base href="/" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" />
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
